--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html>
 
 <head>
+  <title>Bluetooth</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div>
-    Bluetooth
+  <div id="content">
+    <h1>Bluetooth</h1>
 
-    A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
+    <div class="frame">
+      <img src="BluetoothLogo.svg" alt="A Bluetooth logÃ³ja">
+    </div>
 
-    Név eredete (kék fog)
+    A Bluetooth (ejtsd: blÃºtÃºsz, IPA: [blu:tu:?]) rÃ¶vid hatÃ³tÃ¡volsÃ¡gÃº, adatcserÃ©hez hasznÃ¡lt, nyÃ­lt, vezetÃ©knÃ©lkÃ¼li szabvÃ¡ny. AlkalmazÃ¡sÃ¡val szÃ¡mÃ­tÃ³gÃ©pek, mobiltelefonok (telefonkihangosÃ­tÃ³k) Ã©s egyÃ©b kÃ©szÃ¼lÃ©kek kÃ¶zÃ¶tt automatikusan lï¿½tesï¿½thetï¿½nk kis hatï¿½tï¿½volsï¿½gï¿½ rï¿½diï¿½s kapcsolatot.
 
-    A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a Bluetooth-t is arra szánták, hogy egyesítsen és összekössön olyan különbözõ eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A Bluetooth logója a H és B betûknek megfelelõ skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.
+    <h2>Nï¿½v eredete (kï¿½k fog)</h2>
 
-    Alkalmazása
+    A nï¿½v Harald Blatand (I. Harald dï¿½n kirï¿½ly) dï¿½n kirï¿½ly nevï¿½nek angol vï¿½ltozata, aki 958-tï¿½l, illetve 976-tï¿½l 986-ig volt Dï¿½nia ï¿½s Norvï¿½gia uralkodï¿½ja, ï¿½s nagyon szerette az ï¿½fonyï¿½t, ezï¿½rt kï¿½k lett a foga. Harald arrï¿½l volt nevezetes, hogy egyesï¿½tette a lï¿½zongï¿½ dï¿½n, norvï¿½g ï¿½s svï¿½d tï¿½rzseket. Ehhez hasonlï¿½an a Bluetooth-t is arra szï¿½ntï¿½k, hogy egyesï¿½tsen ï¿½s ï¿½sszekï¿½ssï¿½n olyan kï¿½lï¿½nbï¿½zï¿½ eszkï¿½zï¿½ket, mint a szï¿½mï¿½tï¿½gï¿½p, a mobiltelefon, vagy a fejhallgatï¿½. A Bluetooth logï¿½ja a H ï¿½s B betï¿½knek megfelelï¿½ skandinï¿½v rï¿½nï¿½kat, a <i>Haglazt</i> ï¿½s a <i>Berkanant</i> idï¿½zi.
 
-    Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre
-    Számítógép-perifériák csatlakoztatására nyomtatók, billentyûzetek, egerek esetében
-    Fájlok és adatok átvitelére és szinkronizálására személyi digitális asszisztensek (PDA-k, mobiltelefonok és a számítógép) között
-    Egyes digitális zenelejátszók, fényképezõgépek és számítógép között
-    Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz
-    Orvosi és GPS-készülékek
+    <h2>Alkalmazï¿½sa</h2>
 
-    Hatótávolsága
+    Vezetï¿½knï¿½lkï¿½li hï¿½lï¿½zatok kialakï¿½tï¿½sï¿½ra asztali ï¿½s hordozhatï¿½ szï¿½mï¿½tï¿½gï¿½pek kï¿½zï¿½tt, illetve csak asztali gï¿½pek kï¿½zï¿½tt kis terï¿½leten, ha nincs szï¿½ksï¿½g sï¿½vszï¿½lessï¿½gre
+    Szï¿½mï¿½tï¿½gï¿½p-perifï¿½riï¿½k csatlakoztatï¿½sï¿½ra nyomtatï¿½k, billentyï¿½zetek, egerek esetï¿½ben
+    Fï¿½jlok ï¿½s adatok ï¿½tvitelï¿½re ï¿½s szinkronizï¿½lï¿½sï¿½ra szemï¿½lyi digitï¿½lis asszisztensek (PDA-k, mobiltelefonok ï¿½s a szï¿½mï¿½tï¿½gï¿½p) kï¿½zï¿½tt
+    Egyes digitï¿½lis zenelejï¿½tszï¿½k, fï¿½nykï¿½pezï¿½gï¿½pek ï¿½s szï¿½mï¿½tï¿½gï¿½p kï¿½zï¿½tt
+    Autï¿½skï¿½szletek ï¿½s fï¿½lhallgatï¿½k csatlakoztatï¿½sï¿½ra mobiltelefonokhoz
+    Orvosi ï¿½s GPS-kï¿½szï¿½lï¿½kek
 
-    A Bluetooth alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függõen az alábbi távolságon belül képesek kommunikálni:
+    <h2>HatÃ³tÃ¡volsÃ¡ga</h2>
+
+    A Bluetooth alacsony energiafogyasztï¿½sa miatt kï¿½lï¿½nï¿½sen alkalmas hordozhatï¿½ eszkï¿½zï¿½k szï¿½mï¿½ra. A kï¿½szï¿½lï¿½kek osztï¿½lyuktï¿½l fï¿½ggï¿½en az alï¿½bbi tï¿½volsï¿½gon belï¿½l kï¿½pesek kommunikï¿½lni:
 
   </div>
 </body>
