--- a/index.html
+++ b/index.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <title>Bluetooth</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Bluetooth</title>
+  </head>
 
-<body>
-  <div id="content">
-    <h1>Bluetooth</h1>
-
-    A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
-
-    <h2>Név eredete (kék fog)</h2>
-    <div></div>
-      <img src="BluetoothLogo.svg" alt="A Bluetooth logója">
-
-    A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a Bluetooth-t is arra szánták, hogy egyesítsen és összekössön olyan különböző eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A Bluetooth logója a H és B betűknek megfelelő skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.
-
-    <h2>Alkalmazása</h2>
-
-    Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre
-    Számítógép-perifériák csatlakoztatására nyomtatók, billentyűzetek, egerek esetében
-    Fájlok és adatok átvitelére és szinkronizálására személyi digitális asszisztensek (PDA-k, mobiltelefonok és a számítógép) között
-    Egyes digitális zenelejátszók, fényképezőgépek és számítógép között
-    Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz
-    Orvosi és GPS-készülékek
-
-    <h2>Hatótávolsága</h2>
-
-    A Bluetooth alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függően az alábbi távolságon belül képesek kommunikálni:
-
-  </div>
-</body>
+  <body>
+    <div id="content">
+      <h1><a href="https://hu.wikipedia.org/wiki/Bluetooth" target="_blank">Bluetooth</a></h1>
+      <p>
+      A <span>Bluetooth</span> (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
+      </p>
+      <h2>Név eredete (kék fog)</h2>
+      <div class="frame">
+        <img src="BluetoothLogo.svg" alt="A <span>Bluetooth</span> logója">
+        <p class="imgtitle">A Bluetooth logója</p>
+      </div>
+      <p>
+      A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a <span>Bluetooth</span>-t is arra szánták, hogy egyesítsen és összekössön olyan különböző eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A <span>Bluetooth</span> logója a H és B betűknek megfelelő skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.
+      </p>
+      <h2>Alkalmazása</h2>
+      <p>
+      Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre
+      Számítógép-perifériák csatlakoztatására nyomtatók, billentyűzetek, egerek esetében
+      Fájlok és adatok átvitelére és szinkronizálására személyi digitális asszisztensek (PDA-k, mobiltelefonok és a számítógép) között
+      Egyes digitális zenelejátszók, fényképezőgépek és számítógép között
+      Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz
+      Orvosi és GPS-készülékek
+      </p>
+      <h2>Hatótávolsága</h2>
+      <p>
+      A <span>Bluetooth</span> alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függően az alábbi távolságon belül képesek kommunikálni:
+      </p>
+      <table class="myTable">
+        <tr>
+          <th>Osztály</th>
+          <th>Teljesítmény</th>
+          <th>Hatótáv</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>100 Mw (20 dBm)</td>
+          <td>100 méter</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>2,5 Mw (4 dBm)</td>
+          <td>10 méter</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>1 Mw (0 dBm)</td>
+          <td>1 méter</td>
+        </tr>
+      </table>
+    </div>
+  </body>
 
 </html>
